css/styles.css
@font-face {
    font-family: 'Futura';
    src: url('/Futura.ttf');
    src: url('/Futura.ttf') format('truetype'),
    font-weight: normal;
    font-style: normal;
}

body,
html {
    margin: 0;
    height: 100%;
    padding: 0;
}

body {
    background-color: black;
    font-family: 'Heebo', sans-serif;
    color: #C9C4B8;
    display: grid;
    grid-template-rows: 85px 1fr 160px;
}

.c-header {
    grid-row: 1;
}

.c-about {
    width: 81%;
    margin: 0 auto;
    padding: 10px 0;
    line-height: 32px;
    font-size: 17px;
    font-weight: lighter;
}

.c-video {
    overflow: hidden;
    height: 420px;
}

.c-video__film {
    object-fit: contain;
    width: 100%;
}

.c-form {
    max-width: 400px;
    margin: 0 auto;
    padding: 15px 25px 0;
}

.c-form__label {
    font-size: 18px;
    font-weight: lighter;
}

.c-form__field {
    width: 100%;
    margin: 10px 0 25px;
    padding: 8px;
    border: transparent;
    background-color: #d3d3d3;
    font-size: 16px;
    font-weight: lighter;
    box-sizing: border-box;
}

.c-form__submit {
    width: 100px;
    margin: 0 auto;
    display: block;
    background-color: #FFE8D4;
    border: transparent;
    font-size: 16px;
    padding: 8px;
    border-radius: 50px;
}

.c-content {
    grid-row: 2;
}

.c-footer {
    grid-row: 3;
}

.c-svg {
    display: block;
    padding-top: 20px;
    margin: 0 auto;
}

/***** Theme *****/
.t-center-content,
.t-center-footer {
    display: flex;
}

.t-center-content {
    justify-content: center;
    align-items: flex-end;
}

.t-center-footer {
    justify-content: space-around;
    padding-top: 20px;
}

.t-hind-font {
    font-family: 'Futura', 'Hind', sans-serif;
    text-transform: uppercase;
    color: transparent;
    text-shadow: 0 0 1px rgba(201,196,197, 1);
}

.t-fade {
    color: #C9C4B8;
    animation: fadeIn 7s ease-in; 
}

@keyframes fadeIn {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/***** Typography *****/
.t1 {
    font-size: 56px;
}

.t2 {
    font-size: 25px;
    text-transform: uppercase;
    font-weight: 100;
}

.u-clickable {
    cursor: pointer;
}

.u-textarea-height {
    height: 150px;
}

@media screen and (min-width: 550px) {
    body {
        grid-template-rows: 120px 1fr 60px;
    }

    .t1 {
        font-size: 70px;
    }

    .c-video {
        height: 505px;
    }

    .c-form {
        padding: 35px 0 0 0;
    }

    .c-about {
        font-size: 18px;
        width: 70%;
        padding: 20px 0 0 0 ;
    }

    .c-video__film {
        object-fit: cover;
        height: 100vh;
        margin-top: -75px;
    }

    .t-center-content {
        padding-bottom: 15px;
    }
}

@media screen and (min-width: 1350px) {
    body {
        grid-template-rows: 120px 1fr 85px;
    }

    .c-video {
        height: 685px;
    }

    .c-video__film {
        margin-top: -120px;
    }
}

@media screen and (min-width: 1500px) {
    body {
        grid-template-rows: 120px 1fr 120px;
    }

    .c-video {
        height: 815px;
    }

    .c-video__film {
        margin-top: -120px;
    }
}

